test_src/compiler_errors/methods/MethodCallError3.b
class MethodCallError3 {
    void foo(Int value) {
        println(0);
    }
    
    void test() {
        foo(1.0);
    }
}
